# anime-vid-generator

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: STATUS.md  Technical Design Document.md
src/anime_vid_generator/: cli.py  client.py  config.py
src/anime_vid_generator/workflow/: builder.py  nodes.py
src/anime_vid_generator/workflow/stages/: stage1_motion.py  stage2_generation.py  stage3_vfx.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py
tests/workflow/: test_builder.py  test_nodes.py
tests/workflow/stages/: test_stage1_motion.py  test_stage2_generation.py  test_stage3_vfx.py
