[project]
name = "anime-vid-generator"
version = "0.1.0"
description = "ComfyUI-based anime video generation pipeline (Project Kinetic)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer[all]>=0.12.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "rich>=13.0",
]

[project.scripts]
kinetic = "anime_vid_generator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anime_vid_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
]
